--- a/Organization/Organization.Client/Views/DepartmentEmployeeWindow.axaml
+++ b/Organization/Organization.Client/Views/DepartmentEmployeeWindow.axaml
@@ -6,23 +6,25 @@
         x:Class="Organization.Client.Views.DepartmentEmployeeWindow"
         Title="DepartmentEmployeeWindow"
 		SizeToContent="Height"
-		MaxWidth="500">
+		MaxWidth="500"
+		WindowStartupLocation="CenterOwner"
+		Icon="/Assets/organization.png">
 	<Window.Styles>
 		<StyleInclude Source="/OrganizationClientStyles.axaml"/>
 	</Window.Styles>
 
 	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, *" ColumnDefinitions="Auto, *">
-		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Department Id </Label>
+		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Department id </Label>
 		<NumericUpDown Grid.Row="0" Grid.Column="1" Value="{Binding DepartmentId}" Minimum="1"/>
 
-		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Employee Id</Label>
+		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Employee id</Label>
 		<NumericUpDown Grid.Row="1" Grid.Column="1" Value="{Binding EmployeeId}" Minimum="1"/>
 
 		<StackPanel Classes="StackPanelButtons" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
-			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">ОК</Button>
-			<Button IsCancel="True" Click="CancelButtonOnClick">Отмена</Button>
+			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
+			<Button IsCancel="True" Click="CancelButtonOnClick">Cancel</Button>
 		</StackPanel>
 	</Grid>
 </Window>
