--- a/Organization/Organization.Client/Views/EmployeeWindow.axaml
+++ b/Organization/Organization.Client/Views/EmployeeWindow.axaml
@@ -6,46 +6,48 @@
         x:Class="Organization.Client.Views.EmployeeWindow"
         Title="EmployeeWindow"
 		SizeToContent="Height"
-		MaxWidth="600">
+		MaxWidth="600"
+		WindowStartupLocation="CenterOwner"
+		Icon="/Assets/employee.png">
 	<Window.Styles>
 		<StyleInclude Source="/OrganizationClientStyles.axaml"/>
 	</Window.Styles>
 
 	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
-		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Рег. номер </Label>
+		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Registration number</Label>
 		<NumericUpDown Grid.Row="0" Grid.Column="1" Value="{Binding RegNumber}" Minimum="1"/>
 
-		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Имя</Label>
+		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">First name</Label>
 		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FirstName}"></TextBox>
 		
-		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Фамилия</Label>
+		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Last name</Label>
 		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding LastName}"></TextBox>
 
-		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Отчество</Label>
+		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Patronymic name</Label>
 		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding PatronymicName}"></TextBox>
 
-		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Дата рождения</Label>
+		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Birth date</Label>
 		<DatePicker Grid.Row="4" Grid.Column="1" SelectedDate="{Binding BirthDate}" />
 
-		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">Id цеха</Label>
+		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">Workshop id</Label>
 		<NumericUpDown Grid.Row="5" Grid.Column="1" Value="{Binding WorkshopId}" Minimum="1"/>
 
-		<Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Домашний адрес</Label>
+		<Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Home address</Label>
 		<TextBox Grid.Row="6" Grid.Column="1" Text="{Binding HomeAddress}"></TextBox>
 
-		<Label Grid.Row="7" Grid.Column="0" VerticalAlignment="Center">Домашний телефон</Label>
+		<Label Grid.Row="7" Grid.Column="0" VerticalAlignment="Center">Home telephone</Label>
 		<TextBox Grid.Row="7" Grid.Column="1" Text="{Binding HomeTelephone}"></TextBox>
 		
-		<Label Grid.Row="8" Grid.Column="0" VerticalAlignment="Center">Рабочий телефон</Label>
+		<Label Grid.Row="8" Grid.Column="0" VerticalAlignment="Center">Work telephone</Label>
 		<TextBox Grid.Row="8" Grid.Column="1" Text="{Binding WorkTelephone}"></TextBox>
 
-		<Label Grid.Row="9" Grid.Column="0" VerticalAlignment="Center">Семейное положение</Label>
+		<Label Grid.Row="9" Grid.Column="0" VerticalAlignment="Center">Family status</Label>
 		<TextBox Grid.Row="9" Grid.Column="1" Text="{Binding FamilyStatus}"></TextBox>
 
-		<Label Grid.Row="10" Grid.Column="0" VerticalAlignment="Center">Количество человек в семье</Label>
+		<Label Grid.Row="10" Grid.Column="0" VerticalAlignment="Center">Number of family members</Label>
 		<NumericUpDown Grid.Row="10" Grid.Column="1" Value="{Binding FamilyMembersCount}" Minimum="1"/>
 
-		<Label Grid.Row="11" Grid.Column="0" VerticalAlignment="Center">Количество детей</Label>
+		<Label Grid.Row="11" Grid.Column="0" VerticalAlignment="Center">Number of children</Label>
 		<NumericUpDown Grid.Row="11" Grid.Column="1" Value="{Binding ChildrenCount}" Minimum="0"/>
 
 		<StackPanel Classes="StackPanelButtons" Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2"
