--- a/Organization/Organization.Client/Views/VacationVoucherWindow.axaml
+++ b/Organization/Organization.Client/Views/VacationVoucherWindow.axaml
@@ -6,7 +6,9 @@
         x:Class="Organization.Client.Views.VacationVoucherWindow"
         Title="VacationVoucherWindow"
 	    SizeToContent="Height"
-	    MaxWidth="500">
+	    MaxWidth="500"
+		WindowStartupLocation="CenterOwner"
+		Icon="/Assets/voucher.png">
 	<Window.Styles>
 		<StyleInclude Source="/OrganizationClientStyles.axaml"/>
 	</Window.Styles>
@@ -14,7 +16,7 @@
 		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Issue date</Label>
 		<DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding IssueDate}" />
 		
-		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Voucher type Id</Label>
+		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Voucher type id</Label>
 		<NumericUpDown Grid.Row="1" Grid.Column="1" Value="{Binding VoucherTypeId}" Minimum="1"/>
 
 		<StackPanel Classes="StackPanelButtons" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
