--- a/PONRF/PonrfClient/Views/MainWindow.axaml
+++ b/PONRF/PonrfClient/Views/MainWindow.axaml
@@ -30,44 +30,174 @@
 					MaterialOpacity="0.75" />
 			</ExperimentalAcrylicBorder.Material>
 		</ExperimentalAcrylicBorder>
-			<Grid Classes="MainGrid" RowDefinitions="Auto,*,*" ColumnDefinitions="Auto, *">
-				<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Foreground="White" FontSize="30" Margin="80, 60, 0, 0">Tables</Label>
-				<Label Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Foreground="White" FontSize="30" Margin="120, 60, 0, 0">Requests</Label>
-				<StackPanel Grid.Row="1" Orientation="Horizontal">
-					<Button Classes="MainButton" Click="PrivatizedBuilding_Button_Click">
-						<Image Source="/Assets/PrivatizedBuilding.png"/>
-					</Button>
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/Building.png"/>
-					</Button>
-				</StackPanel>
-				<StackPanel Grid.Row="2" Orientation="Horizontal">
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/Auction.png"/>
-					</Button>
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/Customer.png"/>
-					</Button>
-				</StackPanel>
-				<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="40,0,0,0">
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/ViewAllCustomers.png"/>
-					</Button>
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/AuctionsWithoutFullSales.png"/>
-					</Button>
-				</StackPanel>
-				<StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="40,0,0,0">
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/TopCustomers.png"/>
-					</Button>
-					<Button Classes="MainButton" >
-						<Image Source="/Assets/TopAuctions.png"/>
-					</Button>
-				</StackPanel>
-			</Grid>
-			
-			
-	</Panel>
-	
+			<TabControl>
+				<TabItem Header="Privatized buildings" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding OnAddPrivatizedBuildingCommand}">
+								<Image Source="/Assets/Add.png" />
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnChangePrivatizedBuildingCommand}">
+								<Image Source="/Assets/Change.png"/>
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnDeletePrivatizedBuildingCommand}">
+								<Image Source="/Assets/Delete.png" />
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding	PrivatizedBuildings}"
+								  SelectedItem="{Binding SelectedPrivatizedBuilding}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Date of sale" Binding="{Binding DateOfSale}"/>
+								<DataGridTextColumn Header="First cost" Binding="{Binding FirstCost}"/>
+								<DataGridTextColumn Header="Second cost" Binding="{Binding SecondCost}"/>
+								<DataGridTextColumn Header="Customer's Id" Binding="{Binding CustomerId}"/>
+								<DataGridTextColumn Header="Auction's Id" Binding="{Binding AuctionId}"/>
+								<DataGridTextColumn Header="Building's Id" Binding="{Binding BuildingId}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="Auctions" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding OnAddAuctionCommand}">
+								<Image Source="/Assets/Add.png" />
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnChangeAuctionCommand}">
+								<Image Source="/Assets/Change.png"/>
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnDeleteAuctionCommand}">
+								<Image Source="/Assets/Delete.png" />
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding	Auctions}"
+								  SelectedItem="{Binding SelectedAuction}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Date" Binding="{Binding Date}"/>
+								<DataGridTextColumn Header="Organizer" Binding="{Binding Organizer}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="Buildings" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding OnAddBuildingCommand}">
+								<Image Source="/Assets/Add.png" />
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnChangeBuildingCommand}">
+								<Image Source="/Assets/Change.png"/>
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnDeleteBuildingCommand}">
+								<Image Source="/Assets/Delete.png" />
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding	Buildings}"
+								  SelectedItem="{Binding SelectedBuilding}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Date of build" Binding="{Binding DateOfBuild}"/>
+								<DataGridTextColumn Header="Registration number" Binding="{Binding RegistNum}"/>
+								<DataGridTextColumn Header="District" Binding="{Binding District}"/>
+								<DataGridTextColumn Header="Street" Binding="{Binding Street}"/>
+								<DataGridTextColumn Header="House number" Binding="{Binding HouseNumber}"/>
+								<DataGridTextColumn Header="Area" Binding="{Binding Area}"/>
+								<DataGridTextColumn Header="Floors" Binding="{Binding Floors}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="Customers" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding OnAddCustomerCommand}">
+								<Image Source="/Assets/Add.png" />
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnChangeCustomerCommand}">
+								<Image Source="/Assets/Change.png"/>
+							</Button>
+							<Button Classes="ToolButton" Command="{Binding OnDeleteCustomerCommand}">
+								<Image Source="/Assets/Delete.png" />
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding	Customers}"
+								  SelectedItem="{Binding SelectedCustomer}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Passport" Binding="{Binding Passport}"/>
+								<DataGridTextColumn Header="Fio" Binding="{Binding Fio}"/>
+								<DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="View all customers" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding ShowViewAllCustomers}">
+								<Image Source="/Assets/Run.png"/>
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding ViewAllCustomers}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Passport" Binding="{Binding Passport}"/>
+								<DataGridTextColumn Header="Fio" Binding="{Binding Fio}"/>
+								<DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="Auction without full sales" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding ShowAuctionWithoutFullSales}">
+								<Image Source="/Assets/Run.png"/>
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding AuctionWithoutFullSales}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Date" Binding="{Binding Date}"/>
+								<DataGridTextColumn Header="Organizer" Binding="{Binding Organizer}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="Top-5 customers" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding ShowTopCustomer}">
+								<Image Source="/Assets/Run.png"/>
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding TopCustomer}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Fio" Binding="{Binding Fio}"/>
+								<DataGridTextColumn Header="Total" Binding="{Binding Total}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="MostProfitableAuctions" VerticalContentAlignment="Center">
+					<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Button Classes="ToolButton" Command="{Binding ShowTopAuction}">
+								<Image Source="/Assets/Run.png"/>
+							</Button>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+								  Items="{Binding TopAuction}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Organizer" Binding="{Binding Organizer}"/>
+								<DataGridTextColumn Header="Profit" Binding="{Binding Profit}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+					</Grid>
+				</TabItem>
+			</TabControl>
+		</Panel>
 </Window>
