--- a/Organization/Organization.Client/Views/MainWindow.axaml
+++ b/Organization/Organization.Client/Views/MainWindow.axaml
@@ -361,7 +361,86 @@
 					<TabItem.Header>
 						<TextBlock VerticalAlignment="Center">Employees with more than one department</TextBlock>
 					</TabItem.Header>
-					KY32
+					<DataGrid AutoGenerateColumns="False"
+						  Items="{Binding EmployeesWithFewDepartments}"
+						  IsReadOnly="True">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Registration number"
+												Binding="{Binding RegNumber}"/>
+							<DataGridTextColumn Header="First name"
+												Binding="{Binding FirstName}"/>
+							<DataGridTextColumn Header="Last name"
+												Binding="{Binding LastName}"/>
+							<DataGridTextColumn Header="Patronymic name"
+												Binding="{Binding PatronymicName}"/>
+							<DataGridTextColumn Header="Number of departments"
+												Binding="{Binding CountDepart}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</TabItem>
+
+				<TabItem>
+					<TabItem.Header>
+						<TextBlock VerticalAlignment="Center">Archive of dismissals</TextBlock>
+					</TabItem.Header>
+					<DataGrid AutoGenerateColumns="False"
+						  Items="{Binding ArchiveOfDismissals}"
+						  IsReadOnly="True">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Registration number"
+												Binding="{Binding RegNumber}"/>
+							<DataGridTextColumn Header="First name"
+												Binding="{Binding FirstName}"/>
+							<DataGridTextColumn Header="Last name"
+												Binding="{Binding LastName}"/>
+							<DataGridTextColumn Header="Patronymic name"
+												Binding="{Binding PatronymicName}"/>
+							<DataGridTextColumn Header="Birth date"
+												Binding="{Binding BirthDate}"/>
+							<DataGridTextColumn Header="Workshop name"
+												Binding="{Binding WorkshopName}"/>
+							<DataGridTextColumn Header="Department name"
+												Binding="{Binding DepartmentName}"/>
+							<DataGridTextColumn Header="Occupation name"
+												Binding="{Binding OccupationName}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</TabItem>
+
+				<TabItem>
+					<TabItem.Header>
+						<TextBlock VerticalAlignment="Center">Average age in departments</TextBlock>
+					</TabItem.Header>
+					<DataGrid AutoGenerateColumns="False"
+						  Items="{Binding AverageAgeInDepartments}"
+						  IsReadOnly="True">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Average age"
+												Binding="{Binding AverageAge}"/>
+							<DataGridTextColumn Header="Department name"
+												Binding="{Binding DepartmentName}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</TabItem>
+
+				<TabItem>
+					<TabItem.Header>
+						<TextBlock VerticalAlignment="Center">Employees with last year voucher</TextBlock>
+					</TabItem.Header>
+					<DataGrid AutoGenerateColumns="False"
+						  Items="{Binding EmployeesLastYearVoucher}"
+						  IsReadOnly="True">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Registration number"
+												Binding="{Binding RegNumber}"/>
+							<DataGridTextColumn Header="First name"
+												Binding="{Binding FirstName}"/>
+							<DataGridTextColumn Header="Last name"
+												Binding="{Binding LastName}"/>
+							<DataGridTextColumn Header="Voucher type name"
+												Binding="{Binding VoucherTypeName}"/>
+						</DataGrid.Columns>
+					</DataGrid>
 				</TabItem>
 			</TabControl>
 		</TabItem>
