--- a/Organization/Organization.Client/Views/MainWindow.axaml
+++ b/Organization/Organization.Client/Views/MainWindow.axaml
@@ -442,6 +442,26 @@
 						</DataGrid.Columns>
 					</DataGrid>
 				</TabItem>
+
+				<TabItem>
+					<TabItem.Header>
+						<TextBlock VerticalAlignment="Center">Employee's work experience</TextBlock>
+					</TabItem.Header>
+					<DataGrid AutoGenerateColumns="False"
+						  Items="{Binding EmployeesWorkExperience}"
+						  IsReadOnly="True">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Registration number"
+												Binding="{Binding RegNumber}"/>
+							<DataGridTextColumn Header="First name"
+												Binding="{Binding FirstName}"/>
+							<DataGridTextColumn Header="Last name"
+												Binding="{Binding LastName}"/>
+							<DataGridTextColumn Header="Work experience"
+												Binding="{Binding WorkExperience}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</TabItem>
 			</TabControl>
 		</TabItem>
 	</TabControl>
