--- a/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Client/Views/EntrantWindow.axaml
+++ b/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Client/Views/EntrantWindow.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="260"
         x:Class="AdmissionCommittee.Client.Views.EntrantWindow"
         xmlns:vm="using:AdmissionCommittee.Client.ViewModels"
-        Title="Add Entrant"
+        Title="Entrant"
         SizeToContent="WidthAndHeight"
 		    WindowStartupLocation="CenterScreen"
         Width="450"
