--- a/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Client/Views/ResultWindow.axaml
+++ b/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Client/Views/ResultWindow.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="260"
         x:Class="AdmissionCommittee.Client.Views.ResultWindow"
         xmlns:vm="using:AdmissionCommittee.Client.ViewModels"
-        Title="Add Result"
+        Title="Result"
         SizeToContent="WidthAndHeight"
 		    WindowStartupLocation="CenterScreen"
         Width="450"
