--- a/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Client/Views/SpecialtyWindow.axaml
+++ b/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Client/Views/SpecialtyWindow.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="260"
         x:Class="AdmissionCommittee.Client.Views.SpecialtyWindow"
         xmlns:vm="using:AdmissionCommittee.Client.ViewModels"
-        Title="Add Specialty"
+        Title="Specialty"
         SizeToContent="WidthAndHeight"
 		    WindowStartupLocation="CenterScreen"
         Width="450"
